Add testing functions with promices

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/styles.css" />
-    <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Text:500|PT+Sans+Narrow|Lobster&display=swap" rel="stylesheet">
-    <title>Document</title>
-</head>
-<body>
-    
-<!-- <lasso-body> --><script src="./static/index.js"></script>
-<script>$_mod.ready();</script><!-- </lasso-body> --></body>
+    <link
+      href="https://fonts.googleapis.com/css?family=Big+Shoulders+Text:500|PT+Sans+Narrow|Lobster&display=swap"
+      rel="stylesheet"
+    />
+    <title>PoloWeather</title>
+  </head>
+  <body>
+    <!-- <lasso-body> --><script src="./static/index.js"></script>
+<script>$_mod.ready();</script><!-- </lasso-body> -->
+  </body>
 </html>
